--- a/Exp1/Regression/Regression.ipynb
+++ b/Exp1/Regression/Regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Machine Learning practice - Regression"
+    "# Machine Learning - Regression"
    ]
   },
   {
